<resources>
    <string name="app_name">酷行天下</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="phone">手机号</string>
    <string name="sex">性别</string>
    <string name="code">验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码?</string>
    <string name="remember">记住密码</string>
    <string name="save">保存</string>

    <string name="edit_photo">编辑照片</string>
    <string name="edit_note">编辑游记</string>

    <string name="action_settings">注销</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>



    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
       <item>@string/nav_item_home</item>
       <item>@string/nav_item_friends</item>
       <item>@string/nav_item_notifications</item>
    </string-array>
</resources>
