<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#FFFFFF"
    tools:context=".activity.RegisterActivity"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="172dp"
        android:layout_height="118dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@mipmap/logo" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_username"
                    android:paddingLeft="15dp"
                    android:background="@drawable/text_bg"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:textColor="@color/black"
                    android:background="@drawable/text_bg"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/phone"
                    android:textColor="@color/black"
                    android:paddingLeft="15dp"
                    android:background="@drawable/text_bg"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/register_code"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/code"
                        android:textColor="@color/black"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="15dp"
                        android:background="@drawable/text_bg"
                        android:inputType="textPersonName"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"

                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/bt_code"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_bg"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:text="获取验证码"/>

            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/btn_bg"
                android:text="注册"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
